--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=8080
+github.client.id=ea959e2356f060c3257c
+github.client.secret=cd9a2ec33f08fc7689259cfd6a6d1fc8f14b2628
+github.redirect.uri=http://localhost:8080/callback
